fix template select due to photo-mask and add overflow hidden to prevent text overflow out of the photos

--- a/assets/css/phototemplate.css
+++ b/assets/css/phototemplate.css
@@ -3,6 +3,7 @@
 	display: inline-block;
 	margin: 5px;
 	position: relative;
+	overflow: hidden;
 }
 
 .template {
